Correct styles mainly on mobile clients

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  } 
+
 * {
   margin: 0;
   padding: 0;
